flapivor/tests/m1/hopix/parser/bad/96-if-then-else.hopix
val main =
  if True then else 1